2003-06-30
	* version 1.1.6
	* fix a number of obscure bugs
	* more stats reporting
	
2003-06-10
	* removing use of Judy; use a hash.  (judy caused memory fragmentation)
	* shrink some structures
	* security improvements
	* version 1.1.0
	
2003-06-18
	* changing maxsize back to an unsigned int
	
2003-06-16
	* adding PHP support
	* added CONTRIBUTORS file
	* version 1.0.4
	
2003-06-15
	* forgot to distribute website/api (still learning auto*)
	* version 1.0.3
	
2003-06-15
	* update to version 1.0.2
	* autoconf/automake fixes for older versions
	* make stats report version number
	* change license from GPL to BSD
	
Fri, 13 Jun 2003 10:05:51 -0700  Evan Martin  <martine@danga.com>

	* configure.ac, autogen.sh, Makefile.am:  Use autotools.
	* items.c, memcached.c:  #include <time.h> for time(),
	  printf time_t as %lu (is this correct?),
	  minor warnings fixes.
